[package]
name = "linkerd-sweep"
authors = ["Matei David <matei.david@protonmail.com>"]
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1"
async-trait = "0.1.56"
clap = {version="3.1.6", default-features = false, features = ["derive", "env", "std"]}
futures = "0.3"
hyper = { version = "0.14", features = ["full"]}
json-patch = "0.2.6"
k8s-openapi = { version = "0.14.0", features = ["v1_20"] }
kube = { version = "0.69.0", features = ["runtime", "derive", "admission"] }
kubert = { version = "0.4.0", features = ["log", "shutdown"] }
rustls = {version = "0.20.4", default-features=false}
rustls-pemfile = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.17.0", features = ["rt", "fs", "macros", "net", "sync", "time", "io-util"] }
tokio-rustls = "0.23.3"
tracing = "0.1"
